--- a/src/components/sign-in/styles.scss
+++ b/src/components/sign-in/styles.scss
@@ -1,9 +1,16 @@
 .sign-in {
   width: 30%;
+  min-width: 380px;
   display: flex;
   flex-direction: column;
 
   .title {
     margin: 10px 0;
+  }
+
+  .buttons {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
   }
 }
