--- a/src/components/collection-item/styles.scss
+++ b/src/components/collection-item/styles.scss
@@ -5,7 +5,7 @@
   height: 350px;
   align-items: center;
   position: relative;
-  margin:4px;
+  margin: 4px;
   .image {
     width: 100%;
     height: 95%;
@@ -19,7 +19,7 @@
     opacity: 0.7;
     position: absolute;
     top: 255px;
-    display: flex;
+    display: none;
   }
 
   &:hover {
