--- a/src/components/checkout-item/styles.scss
+++ b/src/components/checkout-item/styles.scss
@@ -26,7 +26,7 @@
     padding-left: 20px;
     display: flex;
     align-items: center;
-    
+
     .arrow {
       cursor: pointer;
     }
@@ -38,5 +38,41 @@
   .remove-button {
     padding-left: 12px;
     cursor: pointer;
+  }
+  @media screen and(max-width:600px) {
+    flex-direction: column;
+    padding: 5px;
+
+    text-align: center;
+    .image-container {
+      width: 100%;
+      padding-right: 0px;
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+    .remove-button {
+      padding-left: 0px;
+    }
+    .name,
+    .quantity,
+    .price {
+      width: 100%;
+    }
+    .quantity {
+      padding-left: 0px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 8px;
+      .arrow {
+        cursor: pointer;
+      }
+      .value {
+        margin: 8px;
+      }
+    }
   }
 }
