--- a/src/components/menu-item/meny-item.styles.scss
+++ b/src/components/menu-item/meny-item.styles.scss
@@ -7,7 +7,9 @@
   justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
+
   overflow: hidden;
+ 
   &:hover {
     cursor: pointer;
 
@@ -61,4 +63,20 @@
       font-size: 16px;
     }
   }
+  @media screen and(max-width:400px) {
+    min-width: 200px;
+    height: 220px;
+    &.large {
+      height: 220px;
+    }
+  }
+  @media screen and(max-width:800px) {
+    min-width: 300px;
+    height: 220px;
+    margin: 5px;
+    &.large {
+      height: 330px;
+    }
+  }
+  
 }
