--- a/src/components/preview-collection/preview-collection.styles.scss
+++ b/src/components/preview-collection/preview-collection.styles.scss
@@ -9,7 +9,14 @@
   }
 
   .preview {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 10px;
+    @media screen and(max-width:800px) {
+      grid-template-columns: 1fr 1fr;
+    }
+    @media screen and(max-width:400px) {
+      grid-template-columns: 1fr;
+    }
   }
 }
