--- a/src/pages/collection/styles.scss
+++ b/src/pages/collection/styles.scss
@@ -12,7 +12,12 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 10px;
-
+    @media screen and(max-width:800px) {
+      grid-template-columns: 1fr 1fr;
+    }
+    @media screen and(max-width:400px) {
+      grid-template-columns: 1fr;
+    }
     & .collection-item {
       margin-bottom: 30px;
       width: 100%;
