--- a/src/components/preview-collection/preview-collection.styles.scss
+++ b/src/components/preview-collection/preview-collection.styles.scss
@@ -10,12 +10,12 @@
 
   .preview {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 10px;
+    grid-template-columns: repeat( auto-fill, minmax(220px, 1fr) );;
+    grid-gap: 40px;
     @media screen and(max-width:800px) {
       grid-template-columns: 1fr 1fr;
     }
-    @media screen and(max-width:400px) {
+    @media screen and(max-width:500px) {
       grid-template-columns: 1fr;
     }
   }
