--- a/src/pages/collection/styles.scss
+++ b/src/pages/collection/styles.scss
@@ -10,12 +10,12 @@
 
   .items {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 10px;
+    grid-template-columns: repeat( auto-fill, minmax(250px, 1fr) );;
+    grid-gap: 20px;
     @media screen and(max-width:800px) {
       grid-template-columns: 1fr 1fr;
     }
-    @media screen and(max-width:400px) {
+    @media screen and(max-width:480px) {
       grid-template-columns: 1fr;
     }
     & .collection-item {
