--- a/src/components/sign-up/styles.scss
+++ b/src/components/sign-up/styles.scss
@@ -1,9 +1,18 @@
 .sign-up {
+  width: 30%;
   display: flex;
   flex-direction: column;
-  width: 380px;
+  min-width: 380px;
 
   .title {
     margin: 10px 0;
+  }
+  @media screen and(max-width:900px) {
+    margin-bottom: 80px;
+    min-width: 300px;
+  }
+ 
+  @media screen and(max-width:360px) {
+    min-width: 220px;
   }
 }
