--- a/src/pages/auth/styles.scss
+++ b/src/pages/auth/styles.scss
@@ -3,4 +3,11 @@
   display: flex;
   justify-content: space-between;
   margin: 30px auto;
+  @media screen and(max-width:900px){
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: auto;
+    
+  }
 }
