--- a/src/components/preview-collection/preview-collection.styles.scss
+++ b/src/components/preview-collection/preview-collection.styles.scss
@@ -10,8 +10,8 @@
 
   .preview {
     display: grid;
-    grid-template-columns: repeat( auto-fill, minmax(220px, 1fr) );;
-    grid-gap: 40px;
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+    grid-gap: 12px;
     @media screen and(max-width:800px) {
       grid-template-columns: 1fr 1fr;
     }
